update controllers,handlers,route and swagger doc
